added buttons to the map layout

--- a/app/src/main/res/layout/activity_map_layout.xml
+++ b/app/src/main/res/layout/activity_map_layout.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_groupChat"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/button_add" />
 
     <Button
         android:id="@+id/button_groupChat"
@@ -29,26 +29,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_nearbyEvents"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/button_add" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/button_add"
+        android:layout_width="38dp"
+        android:layout_height="46dp"
         android:layout_marginStart="158dp"
         android:layout_marginTop="586dp"
         android:layout_marginEnd="159dp"
-        android:text="Button"
+        android:text="+"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_friend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="317dp"
-        android:text="Button"
+        android:text="Friends"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
