--- a/app/src/main/res/layout/activity_map_layout.xml
+++ b/app/src/main/res/layout/activity_map_layout.xml
@@ -6,17 +6,37 @@
     android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/Plus"
+        android:layout_width="147dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="158dp"
+        android:layout_marginTop="572dp"
+        android:layout_marginEnd="159dp"
+        android:backgroundTint="#E91E63"
+        android:text="@string/plus_button"
+        android:textSize="34sp"
+        app:cornerRadius="100dp"
+
+        app:iconTint="@color/purple_200"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
+    <Button
         android:id="@+id/button_nearbyEvents"
         android:layout_width="181dp"
         android:layout_height="83dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="14dp"
-        android:text="Nearby Events"
+        android:text="@string/nearby_events"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_groupChat"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/Plus"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button_groupChat"
@@ -25,21 +45,29 @@
         android:layout_marginStart="17dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="14dp"
-        android:text="Chats"
+        android:text="@string/chats"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_nearbyEvents"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/Plus"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="586dp"
-        android:layout_marginEnd="159dp"
-        android:text="Button"
+        android:id="@+id/friends_button"
+        android:layout_width="61dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="#FFC107"
+        android:text="@string/friends_button"
+        android:textColor="#D81B60"
+        android:textSize="34sp"
+
+        app:cornerRadius="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.902"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
