--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,6 +9,18 @@
     android:orientation="vertical"
     android:visibility="visible" >
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAuth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_baseline_lock"
+        app:fabCustomSize="60dp"
+        app:fabSize="auto"
+        />
+
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
