--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -15,10 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin= "@dimen/cardview_default_elevation"
         android:src="@drawable/ic_baseline_lock"
-        app:fabCustomSize="60dp"
-        app:fabSize="auto"
         />
 
     <EditText
