--- a/app/src/main/res/layout/add_event_popup.xml
+++ b/app/src/main/res/layout/add_event_popup.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="169dp"
         android:layout_marginBottom="47dp"
         android:text="Create Event"
+        android:onClick="createEvent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
